get recette by cotegorie + activate a user + doc
