# src/Controller/CategorieController.php
@@ -54,7 +54,7 @@ class CategorieController extends AbstractController
      *     @OA\Response(
      *          response="200",
      *          description="Get a collection of Categorie",
-     *          @OA\JsonContent(type="array", @OA\Items(ref="#/components/schemas/Categorie"))
+     *          @OA\JsonContent(type="array", @OA\Items(ref="#/components/schemas/CategorieReadRecette"))
      *     ),
      *     @OA\Response(
      *          response="404",
@@ -70,7 +70,7 @@ class CategorieController extends AbstractController
      */
     public function index(Request $request, RecetteFilters $recetteFilters): JsonResponse
     {
-        $context = ["groups" => ["read:recette"]];
+        $context = ["groups" => ["read:categorie"]];
         $paramsURL = $request->query->all();
         $keyFilters = ["nom", "id"];
         $orderBy = $recetteFilters->getOrderBy($paramsURL,$keyFilters,["nom" => "asc"]);
@@ -124,6 +124,39 @@ class CategorieController extends AbstractController
     }
 
     /**
+     * @OA\Post(
+     *     tags={"Categorie"},
+     *     path="/categories",
+     *     summary="Add an item Categorie",
+     *     description="Create an item of Categorie",
+     *     @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              @OA\Property(type="string", property="nom"),
+     *              @OA\Property(type="array", property="recette", @OA\Items(ref="#/components/schemas/Recette")),
+     *          )
+     *     ),
+     *     @OA\Response(
+     *          response="201",
+     *          description="Create an item of Categorie",
+     *          @OA\JsonContent(ref="#/components/schemas/Categorie")
+     *     ),
+     *     @OA\Response(
+     *          response="404",
+     *          ref="#/components/responses/notFound"
+     *     ),
+     *     @OA\Response(
+     *          response="401",
+     *          ref="#/components/responses/unauthorized"
+     *     ),
+     *     @OA\Response(
+     *          response="400",
+     *          ref="#/components/responses/badRequest"
+     *     )
+     * )
+     *
+     *
+     *
      * @Route("/categories", name="categorie_add", methods={"POST"})
      * @param Request $request
      * @return Response
@@ -152,6 +185,41 @@ class CategorieController extends AbstractController
     }
 
     /**
+     * @OA\Put(
+     *     tags={"Categorie"},
+     *     path="/categories/{id}",
+     *     summary="Update an item Categorie",
+     *     description="Update an item of Categorie",
+     *     @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          required=true
+     *     ),
+     *     @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              @OA\Property(type="string", property="nom"),
+     *              @OA\Property(type="array", property="recettes", @OA\Items(ref="#/components/schemas/Recette")),
+     *          )
+     *     ),
+     *     @OA\Response(
+     *          response="200",
+     *          description="Update an item of categorie",
+     *          @OA\JsonContent(ref="#/components/schemas/Categorie")
+     *     ),
+     *     @OA\Response(
+     *          response="404",
+     *          ref="#/components/responses/notFound"
+     *     ),
+     *     @OA\Response(
+     *          response="401",
+     *          ref="#/components/responses/unauthorized"
+     *     )
+     * )
+     *
+     *
+     *
+     *
      * @Route("/categories/{id}", name="categorie_update", methods={"PUT"})
      * @param Categorie $categorie
      * @param Request $request
@@ -172,7 +240,38 @@ class CategorieController extends AbstractController
         return new JsonResponse(["data"=>$categorieNormalized,"message"=>"Success"],Response::HTTP_OK);
     }
 
-     /**
+    /**
+     * @OA\Delete(
+     *     tags={"Categorie"},
+     *     path="/categories/{id}",
+     *     summary="Delete an item Categorie",
+     *     description="Delete an item of Categorie",
+     *     @OA\Parameter(
+     *          name="id",
+     *          required=true,
+     *          in="path"
+     *     ),
+     *     @OA\Response(
+     *          response="204",
+     *          description="Success - Item is deleted",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="Success")
+     *          )
+     *     ),
+     *     @OA\Response(
+     *          response="404",
+     *          ref="#/components/responses/notFound"
+     *     ),
+     *     @OA\Response(
+     *          response="401",
+     *          ref="#/components/responses/unauthorized"
+     *     )
+     *
+     * )
+     *
+     *
+     *
+     *
      * @Route("/categories/{id}", name="delete_categorie", methods={"DELETE"})
      * @param Categorie $categorie
      * @return JsonResponse
